# Py-template

./: .gitignore  README.rst  build_doc.cmd  pyproject.toml  requirments.txt
docs/: conf.py  index.rst  py_template.hello_world.rst  py_template.rst
py_template/: hello_world.py
tests/: test_py_template.py
